# Daletos

./: .gitignore  CMakeLists.txt  CONTRIBUTION.md  PrivacyPolicy.md  README.MD  USEAGE.md
include/: Daletos.h  SystemInfo.h  str_manip.h
src/: Daletos.cpp  SystemInfo.cpp  main.cpp  new.txt  str_manip.cpp
src/include/: Daletos.h  SystemInfo.h  str_manip.h
